src/test/fail/classes/self_outside_class.lly
#[
SyntaxError: 'self' must be used within a class.
Where: File "self_outside_class.lly" at line 6
]#

self
